--- a/frontend/src/components/Navbar/Navbar.css
+++ b/frontend/src/components/Navbar/Navbar.css
@@ -100,3 +100,30 @@
     font-weight: 600;
 }
 
+/*Spinner Animation*/
+.loader-container{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+    background-color: rgba(44, 44, 44, 0.8);
+}
+.loader-icon{
+    font-size: 60px;
+    animation: spin 1s linear infinite;
+    color: #FFDF00;
+}
+
+@keyframes spin{
+    0%{
+        transform: rotate(0deg);
+    }
+    100%{
+        transform: rotate(360deg);
+    }
+}
