--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -16,3 +16,54 @@
     color: #FFDF00;
     text-decoration: none;
   }
+
+/*Best Seller*/
+.product-container{
+  margin-top: 50px;
+}
+.list_header h1{
+  font-size: 38px;
+  font-weight: bold;
+}
+.product-grid{
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 20px;
+  column-gap: 10px;
+  justify-content: center;
+  margin-top: 30px;
+}
+.product-card{
+  width: 250px;
+  border: 1px solid #ddd;
+  padding: 10px;
+  text-align: center;
+  position: relative;
+  overflow: hidden;
+  transition: box-shadow 0.3s ease;
+}
+.product-card:hover{
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+}
+.product-image{
+  position: relative;
+}
+.product-image img{
+  width: 100%;
+  height: 260px;
+  transform: scale(0.8);
+  transition: transform 0.5s ease;
+}
+.product-image img:hover{
+  transform: scale(1);
+}
+.product-card h3{
+  font-size: 20px;
+  margin: 5px 0;
+  margin-bottom: 10px;
+}
+.product-card p{
+  font-size: 20px;
+  color: red;
+  padding-bottom: 15px;
+}
