--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -17,7 +17,7 @@
     text-decoration: none;
   }
 
-/*BestSeller, HomeCollection, Collection*/
+/*BestSeller, HomeCollection, Collection, RelatedProducts*/
 .product-container{
   margin-top: 50px;
 }
