--- a/frontend/src/pages/Cart/Cart.css
+++ b/frontend/src/pages/Cart/Cart.css
@@ -57,5 +57,28 @@
     font-size: 20px;
 }
 
-
-
+/*CartTotal*/
+.checkout-container{
+    display: flex;
+    justify-content: flex-end;
+    margin-top: 5rem;
+    background-color: #fff;
+    padding: 15px;
+    max-width: 600px;
+    justify-content: center;
+}
+.checkout-box{
+    width: 100%;
+    max-width: 28rem;
+}
+.checkout-button-container{
+    width: 100%;
+    text-align: end;
+}
+.checkout-button{
+    background-color: #8F0B0B;
+    color: white;
+    font-size: 0.875rem;
+    margin-top: 2rem;
+    padding: 0.75rem 2rem;
+}
