--- a/frontend/src/pages/Cart/Cart.css
+++ b/frontend/src/pages/Cart/Cart.css
@@ -25,7 +25,7 @@
     font-size: 1.5rem;
     font-weight: 500;
 }
-.product-price-choice{
+.product-price-optionValue{
     display: flex;
     align-items: center;
     gap: 1.25rem;
