--- a/frontend/src/pages/Cart/Cart.css
+++ b/frontend/src/pages/Cart/Cart.css
@@ -32,7 +32,7 @@
     margin-top: 0.5rem;
     margin-bottom: 0.5rem;
 }
-.size{
+.optionValue{
     padding: 0.3rem 0.6rem;
     background-color: #f8f8f8;
     border: 1px solid #e2e2e2;
