Added List Product Page

--- a/admin/src/index.css
+++ b/admin/src/index.css
@@ -19,6 +19,6 @@
     font-size: 1rem;
 }
 .active{
-    background-color: rgba(243, 141, 7);
+    background-color: #FFDF00;
     border-color: #f3e744;
 }
